--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.12.0-M1</version>
+            <version>5.14.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
